# rite-lib-model

./: Cargo.toml  README.md  coverage.sh
.github/workflows/: coverage.yml
data/test/: test-example.xml  testfile.txt
src/: export.rs  field.rs  helper.rs  import.rs  lib.rs  plugin.rs  record.rs  transform.rs  value.rs  xml.rs
src/field/: tests.rs
src/import/: handlers.rs
src/record/: tests.rs
src/value/: from.rs  tests.rs
src/value/from/: tests.rs
src/xml/: common.rs  config.rs  exporter.rs  file.rs  import.rs  plugin.rs  process.rs  test.rs  transformer.rs
src/xml/config/: tests.rs
src/xml/file/: substitute.rs
