[package]
name = "model"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Blochberger"]
description = "RITE model"
readme = "README.md"
repository = "https://github.com/CIAO-systems/rite"
license = "Apache-2.0"

[dependencies]
chrono = "0.4.39"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5"
serde_json = "^1.0"
subst = "0.3"
xml-rs = "0.8"
