[package]
name = "model"
version = "0.1.0"
edition = "2024"
authors = ["Andreas Blochberger"]
description = "RITE model"
readme = "README.md"
repository = "https://github.com/CIAO-systems/rite-lib-model"
license = "Apache-2.0"

[dependencies]
chrono = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5"
serde_json = "^1.0"
subst = "0.3"
xml-rs = "0.8"
libloading = "0.8"
rust_decimal = "1.38.0"

[dev-dependencies]
logtest = "2.0.0"

